--- a/src/.htaccess
+++ b/src/.htaccess
@@ -1,1 +1,12 @@
-test
+# Activation du mod rewrite d'apache
+RewriteEngine On
+RewriteBase /
+
+# Redirection page 404
+ErrorDocument 404 /src/404.php
+
+# Redirection de la racine vers la page d'accueil
+RedirectMatch ^/$ /src/index.php
+
+# Redirection avec paramètres
+RewriteRule ^([a-z0-9]+)/([a-z0-9]+)$ /src/index.php?page=$1&param2=$2  [L]
